--- a/ppt/randomforest.Rmd
+++ b/ppt/randomforest.Rmd
@@ -151,71 +151,38 @@ RandomForest in R is implemented via function `randomForest()` of the homonymous
 
 
 
-xtest	
-a data frame or matrix (like x) containing predictors for the test set.
 
-ytest	
-response for the test set.
-
-* `ntree (m)`: Number of trees to grow. This should not be set to too small a number, to ensure that every input row gets predicted at least a few times.
+* `ntree (N)`: Number of trees to grow. This should not be set to too small a number, to ensure that every input row gets predicted at least a few times.
 
 
-mtry	
-Number of variables randomly sampled as candidates at each split. Note that the default values are different for classification (sqrt(p) where p is number of variables in x) and regression (p/3)
+* `mtry	(m)` Number of variables randomly sampled as candidates at each split. Note that the default values are different for classification (sqrt(p) where p is number of variables in x) and regression (p/3)
 
-weights	
-A vector of length same as y that are positive weights used only in sampling data to grow each tree (not used in any other calculation)
 
-replace	
-Should sampling of cases be done with or without replacement?
+* `weights` A vector of length same as y that are positive weights used only in sampling data to grow each tree (not used in any other calculation)
 
-classwt	
-Priors of the classes. Need not add up to one. Ignored for regression.
+* `replace`:	Should sampling of cases be done with or without replacement?
 
-cutoff	
-(Classification only) A vector of length equal to number of classes. The ‘winning’ class for an observation is the one with the maximum ratio of proportion of votes to cutoff. Default is 1/k where k is the number of classes (i.e., majority vote wins).
+`classwt`: Priors of the classes. Need not add up to one. Ignored for regression.
 
-strata	
-A (factor) variable that is used for stratified sampling.
+* `cutoff:` (Classification only) A vector of length equal to number of classes. The ‘winning’ class for an observation is the one with the maximum ratio of proportion of votes to cutoff. Default is 1/k where k is the number of classes (i.e., majority vote wins).
 
-sampsize	
-Size(s) of sample to draw. For classification, if sampsize is a vector of the length the number of strata, then sampling is stratified by strata, and the elements of sampsize indicate the numbers to be drawn from the strata.
+* `strata`: A (factor) variable that is used for stratified sampling.
 
-nodesize	
-Minimum size of terminal nodes. Setting this number larger causes smaller trees to be grown (and thus take less time). Note that the default values are different for classification (1) and regression (5).
+* `sampsize`: Size(s) of sample to draw. For classification, if sampsize is a vector of the length the number of strata, then sampling is stratified by strata, and the elements of sampsize indicate the numbers to be drawn from the strata.
 
-maxnodes	
-Maximum number of terminal nodes trees in the forest can have. If not given, trees are grown to the maximum possible (subject to limits by nodesize). If set larger than maximum possible, a warning is issued.
+* `nodesize`: Minimum size of terminal nodes. Setting this number larger causes smaller trees to be grown (and thus take less time). Note that the default values are different for classification (1) and regression (5).
 
-importance	
-Should importance of predictors be assessed?
+* `maxnodes`:	Maximum number of terminal nodes trees in the forest can have. If not given, trees are grown to the maximum possible (subject to limits by nodesize). If set larger than maximum possible, a warning is issued.
 
-localImp	
-Should casewise importance measure be computed? (Setting this to TRUE will override importance.)
+* `importance`: Should importance of predictors be assessed?
 
-nPerm	
-Number of times the OOB data are permuted per tree for assessing variable importance. Number larger than 1 gives slightly more stable estimate, but not very effective. Currently only implemented for regression.
+* `localImp`: Should casewise importance measure be computed? (Setting this to TRUE will override importance.)
 
-proximity	
-Should proximity measure among the rows be calculated?
+* `nPerm`: Number of times the OOB data are permuted per tree for assessing variable importance. Number larger than 1 gives slightly more stable estimate, but not very effective. Currently only implemented for regression.
 
-oob.prox	
-Should proximity be calculated only on “out-of-bag” data?
+`proximity`: Should proximity measure among the rows be calculated?
 
-norm.votes	
-If TRUE (default), the final result of votes are expressed as fractions. If FALSE, raw vote counts are returned (useful for combining results from different runs). Ignored for regression.
+`oob.prox	`: Should proximity be calculated only on “out-of-bag” data?
 
-do.trace	
-If set to TRUE, give a more verbose output as randomForest is run. If set to some integer, then running output is printed for every do.trace trees.
+`norm.votes`: If TRUE (default), the final result of votes are expressed as fractions. If FALSE, raw vote counts are returned (useful for combining results from different runs). Ignored for regression.
 
-keep.forest	
-If set to FALSE, the forest will not be retained in the output object. If xtest is given, defaults to FALSE.
-
-corr.bias	
-perform bias correction for regression? Note: Experimental. Use at your own risk.
-
-keep.inbag	
-Should an n by ntree matrix be returned that keeps track of which samples are “in-bag” in which trees (but not how many times, if sampling with replacement)
-
-...	
-optional parameters to be passed to the low level function randomForest.default.
