new nsixtla tests

--- a/ppt/xgboost.Rmd
+++ b/ppt/xgboost.Rmd
@@ -207,7 +207,8 @@ Boosting can easily lead to overfitting. A stop rule is strongly required
 
 
 
-
+Alten/SDG x AXA - Approfondimento ambito AI
+Wednesday, March 26⋅11:00 – 12:00
 
 
 
